--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
+<head>
+<meta name="google-site-verification" content="URiwmJJCRchOEU2BOMGHGgoiKExNlKambRvhSuUZ0DY" />
+</head> 
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>!</h1>
 </body>
 </html>
